# Sage

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  change_log.md  pyproject.toml  pyrightconfig.json  requirements.txt
.githooks/: pre-commit  pre-merge-commit
.github/workflows/: ci-tests.yml  generate-sage-xunhuan-configmap.yml  publish-prod-images.yml  release-desktop.yml
app/cli/: errors.py  formatting.py  main.py  parser.py  service.py
app/desktop/: entry.py  sage-desktop.spec
app/server/: bootstrap.py  lifecycle.py  main.py
app/terminal/: BOUNDARY.md  README.md  __init__.py
common/core/: config.py  context.py  exceptions.py  i18n.py  middleware.py  render.py
common/models/: agent.py  conversation.py  im_channel.py  kdb.py  llm_provider.py  mcp_server.py  oauth2.py  system.py  task.py  token_usage.py  user.py
common/schemas/: agent.py  base.py  chat.py
common/services/: agent_service.py  agent_view_service.py  agent_workspace.py  async_task_service.py  chat_processor.py  chat_service.py  chat_stream_manager.py  chat_utils.py  conversation_router_service.py  conversation_service.py  llm_provider_probe_utils.py  llm_provider_service.py  mcp_service.py  skill_router_service.py  skill_service.py  system_service.py  task_service.py  token_usage_service.py  tool_service.py
common/utils/: logging.py  mcp_anytool_url.py  safe_remote_fetch.py
deploy/: README.md  compose.sh  docker-compose.observability.yml  docker-compose.shared.yml
deploy/dev/: .env.example  docker-compose.yml
deploy/images/: Dockerfile.web  Dockerfile.wiki
deploy/k8s/: README.md
deploy/monitoring/: alloy.alloy  loki.yml  prometheus.local.yml.example  prometheus.yml
deploy/nginx/: nginx_wiki.conf
deploy/prod/: .env.example  (+1 more)
examples/: README.md  coding_agent_config.json  sage_cli.py  sage_demo.py  sage_server.py
release_notes/: v1.0.0.md
sagents/: __init__.py  sagents.py  session_registry.py  session_runtime.py
scripts/: cleanup_llm_request_dirs.py  cleanup_llm_request_dirs.sh  install-git-hooks.sh  memory_search_benchmark.py  memory_search_validate.py
(+683 files in other folders)
